# auv_ros

./: .gitignore  Makefile
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
scripts/: install.sh
src/auv_drivers/: package.xml  setup.py
src/auv_drivers/auv_drivers/: esc_driver.py
src/auv_msgs/: CMakeLists.txt  package.xml
src/auv_msgs/srv/: AddWaypoint.srv  SetGoal.srv
src/bluerov2_description/: CMakeLists.txt
src/bluerov2_description/urdf/: bluerov2.xacro
src/mezzo_navi/: package.xml  setup.cfg  setup.py
src/mezzo_navi/config/: controller.yaml  ekf.yaml
src/mezzo_navi/launch/: mezzo_navi.launch.py
src/mezzo_navi/mezzo_navi/: depth_pose_converter.py  pid.py  thruster_allocator.py  velocity_controller.py
src/navi/: package.xml  setup.cfg  setup.py
src/navi/config/: nav.rviz  navigation.yaml
src/navi/launch/: navi.launch.py
src/navi/navi/: global_planner.py  local_planner.py  position_controller.py  visualizer.py
src/robot_bringup/: package.xml  setup.py
src/robot_bringup/config/: fossen.yaml  isaac_sim.yaml  sensors.yaml  thrusters.yaml
src/robot_bringup/isaac/: fossen.py  isaac_sim.py  sim_sensor_drivers.py  sim_thruster_driver.py
src/robot_bringup/launch/: isaac.launch.py
src/robot_bringup/scripts/: sim_robot.sh
