<?xml version="1.0"?>
<package format="3">
  <name>auv_msgs</name>
  <version>0.1.0</version>
  <description>Custom ROS 2 messages and services for AUV project.</description>
  <maintainer email="kchmielewski707@gmail.com">jakub</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
