<?xml version="1.0"?>
<package format="3">
  <name>navi</name>
  <version>0.1.0</version>
  <description>
    AUV main computer navigation stack.
    Outer loop: pozycja → setpoint prędkości (→ mezzo_navi).
    Docelowo: global planner, local planner (Pure Pursuit / DWA),
    mission manager, integracja z mapą.
  </description>
  <maintainer email="kchmielewski707@gmail.com">jakub</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>auv_msgs</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
